--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <!-- Début du header -->
     <header>
-        <h1>Ohmyfood</h1>
+        <img src="model\img\logo\ohmyfood.png" alt="logo ohmyfood">
     </header>
     <!-- Fin du header -->
 
@@ -33,14 +33,69 @@
         <section class="presentation">
             <h2>Réservez le menu qui vous convient</h2>
             <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
-            <a class="btn btn--gradient btn--radius" href="#">Explorer nos restaurants</a>
+            <a class="" href="#">Explorer nos restaurants</a>
         </section>
         <!-- Fin de la section presentation -->
+        <!-- Début de la section fonctionnement -->
+        <section class="fonctionnement">
+            <h1>Fonctionnement</h1>
+            <section class="list_fonctionnement">
+                <ol>
+                    <li><i class="fas fa-mobile-alt"></i>Choisissez un restaurant</li>
+                    <li><i class="fas fa-list"></i>Composez votre menu</li>
+                    <li><i class="fas fa-utensils"></i>Dégustez au restaurant</li>
+                </ol>
+            </section>
+        </section>
+        <!-- Fin de la section fonctionnement -->
+
+        <!-- Début de la section restaurants -->
+        <section class="restaurants">
+            <h1>Restaurants</h1>
+            <section class="palette_du_gout">
+                <a href="#">
+                    <img src="" alt="image du restaurant">
+                    <span class="isnew">Nouveau</span>
+                    <h3 class="name_restaurant">La palette du goût</h3>
+                    <span class="lieu_restaurant">Ménilmontant</span>
+                </a>
+                <span class="like"><i class="far fa-heart"></i></span>
+            </section>
+            <section class="note_enchantee">
+                <a href="#">
+                    <img src="" alt="image du restaurant">
+                    <span class="isnew">Nouveau</span>
+                    <h3 class="name_restaurant">La note enchantée</h3>
+                    <span class="lieu_restaurant">Charonne</span>
+                </a>
+                <span class="like"><i class="far fa-heart"></i></span>
+            </section>
+            <section class="la_francaise">
+                <a href="#">
+                    <img src="" alt="image du restaurant">
+                    <h3 class="name_restaurant">A la française</h3>
+                    <span class="lieu_restaurant">Cité Rouge</span>
+                </a>
+                <span class="like"><i class="far fa-heart"></i></span>
+            </section>
+            <section class="delice_sens">
+                <a href="#">
+                    <img src="" alt="image du restaurant">
+                    <h3 class="name_restaurant">Le délice des sens</h3>
+                    <span class="lieu_restaurant">Folie-Méricourt</span>
+                </a>
+                <span class="like"><i class="far fa-heart"></i></span>
+            </section>
+        </section>
+        <!-- Fin de la section restaurants -->
     </main>
 
     <footer>
-        
+        <img src="model\img\logo\ohmyfood.png" alt="logo ohmyfood">
+        <p><i class="fas fa-utensils"></i>Proposer un restaurant</p>
+        <p><i class="fas fa-hands-helping"></i>Devenir partenaire</p>
+        <p>Mentions légales</p>
+        <p>Contact</p>
     </footer>
-    
 </body>
 </html>
