--- a/index.html
+++ b/index.html
@@ -39,12 +39,19 @@
         <!-- Début de la section fonctionnement -->
         <section class="fonctionnement">
             <h1>Fonctionnement</h1>
-            <section class="list_fonctionnement">
-                <ol>
-                    <li><i class="fas fa-mobile-alt"></i>Choisissez un restaurant</li>
-                    <li><i class="fas fa-list"></i>Composez votre menu</li>
-                    <li><i class="fas fa-utensils"></i>Dégustez au restaurant</li>
-                </ol>
+            <section class="all_informations">
+                <section class="choisir_restaurant">
+                    <p class="fonctionnement_number">1</p>
+                    <p class="fonctionnement_text"><i class="fas fa-mobile-alt"></i>Choisissez un restaurant</p>
+                </section>
+                <section class="composez_menu">
+                    <p class="fonctionnement_number">2</p>
+                    <p class="fonctionnement_text"><i class="fas fa-list"></i>Composez votre menu</p>
+                </section>
+                <section class="degustez_restaurant">
+                    <p class="fonctionnement_number">3</p>
+                    <p class="fonctionnement_text"><i class="fas fa-utensils"></i>Dégustez au restaurant</p>
+                </section>
             </section>
         </section>
         <!-- Fin de la section fonctionnement -->
