--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
             <h1>Fonctionnement</h1>
             <section class="all_informations">
                 <section class="choisir_restaurant">
-                    <p class="fonctionnement_number">1</p>
+                    <span class="fonctionnement_number">1</span>
                     <p class="fonctionnement_text"><i class="fas fa-mobile-alt"></i>Choisissez un restaurant</p>
                 </section>
                 <section class="composez_menu">
-                    <p class="fonctionnement_number">2</p>
+                    <span class="fonctionnement_number">2</span>
                     <p class="fonctionnement_text"><i class="fas fa-list"></i>Composez votre menu</p>
                 </section>
                 <section class="degustez_restaurant">
-                    <p class="fonctionnement_number">3</p>
+                    <span class="fonctionnement_number">3</span>
                     <p class="fonctionnement_text"><i class="fas fa-utensils"></i>Dégustez au restaurant</p>
                 </section>
             </section>
@@ -61,16 +61,16 @@
             <h1>Restaurants</h1>
             <section class="palette_du_gout">
                 <a href="#">
-                    <img src="" alt="image du restaurant">
+                    <img src="model\img\restaurants\palettedugout.jpg" alt="image du restaurant">
                     <span class="isnew">Nouveau</span>
                     <h3 class="name_restaurant">La palette du goût</h3>
                     <span class="lieu_restaurant">Ménilmontant</span>
                 </a>
                 <span class="like"><i class="far fa-heart"></i></span>
             </section>
-            <section class="note_enchantee">
+            <!--<section class="note_enchantee">
                 <a href="#">
-                    <img src="" alt="image du restaurant">
+                    <img src="model\img\restaurants\noteenchante.jpg" alt="image du restaurant">
                     <span class="isnew">Nouveau</span>
                     <h3 class="name_restaurant">La note enchantée</h3>
                     <span class="lieu_restaurant">Charonne</span>
@@ -79,7 +79,7 @@
             </section>
             <section class="la_francaise">
                 <a href="#">
-                    <img src="" alt="image du restaurant">
+                    <img src="model\img\restaurants\alafrancaise.jpg" alt="image du restaurant">
                     <h3 class="name_restaurant">A la française</h3>
                     <span class="lieu_restaurant">Cité Rouge</span>
                 </a>
@@ -87,12 +87,12 @@
             </section>
             <section class="delice_sens">
                 <a href="#">
-                    <img src="" alt="image du restaurant">
+                    <img src="model\img\restaurants\ledelicesens.jpg" alt="image du restaurant">
                     <h3 class="name_restaurant">Le délice des sens</h3>
                     <span class="lieu_restaurant">Folie-Méricourt</span>
                 </a>
                 <span class="like"><i class="far fa-heart"></i></span>
-            </section>
+            </section>-->
         </section>
         <!-- Fin de la section restaurants -->
     </main>
