--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <!-- Début de la section fonctionnement -->
         <section class="fonctionnement">
             <h1>Fonctionnement</h1>
-            <section class="all_informations">
+            <section class="all_fonctionnements">
                 <section class="choisir_restaurant">
                     <span class="fonctionnement_number">1</span>
                     <p class="fonctionnement_text"><i class="fas fa-mobile-alt"></i>Choisissez un restaurant</p>
@@ -59,40 +59,42 @@
         <!-- Début de la section restaurants -->
         <section class="restaurants">
             <h1>Restaurants</h1>
-            <section class="palette_du_gout">
-                <a href="#">
-                    <img src="model\img\restaurants\palettedugout.jpg" alt="image du restaurant">
+            <section class="all_restaurants">
+                <section class="palette_du_gout">
+                    <a href="#">
+                        <img src="model\img\restaurants\palettedugout.jpg" alt="image du restaurant">
+                        <h3 class="name_restaurant">La palette du goût</h3>
+                        <span class="lieu_restaurant">Ménilmontant</span>
+                    </a>
                     <span class="isnew">Nouveau</span>
-                    <h3 class="name_restaurant">La palette du goût</h3>
-                    <span class="lieu_restaurant">Ménilmontant</span>
-                </a>
-                <span class="like"><i class="far fa-heart"></i></span>
+                    <span class="like"><i class="far fa-heart"></i></span>
+                </section>
+                <!--<section class="note_enchantee">
+                    <a href="#">
+                        <img src="model\img\restaurants\noteenchante.jpg" alt="image du restaurant">
+                        <span class="isnew">Nouveau</span>
+                        <h3 class="name_restaurant">La note enchantée</h3>
+                        <span class="lieu_restaurant">Charonne</span>
+                    </a>
+                    <span class="like"><i class="far fa-heart"></i></span>
+                </section>
+                <section class="la_francaise">
+                    <a href="#">
+                        <img src="model\img\restaurants\alafrancaise.jpg" alt="image du restaurant">
+                        <h3 class="name_restaurant">A la française</h3>
+                        <span class="lieu_restaurant">Cité Rouge</span>
+                    </a>
+                    <span class="like"><i class="far fa-heart"></i></span>
+                </section>
+                <section class="delice_sens">
+                    <a href="#">
+                        <img src="model\img\restaurants\ledelicesens.jpg" alt="image du restaurant">
+                        <h3 class="name_restaurant">Le délice des sens</h3>
+                        <span class="lieu_restaurant">Folie-Méricourt</span>
+                    </a>
+                    <span class="like"><i class="far fa-heart"></i></span>
+                </section>-->
             </section>
-            <!--<section class="note_enchantee">
-                <a href="#">
-                    <img src="model\img\restaurants\noteenchante.jpg" alt="image du restaurant">
-                    <span class="isnew">Nouveau</span>
-                    <h3 class="name_restaurant">La note enchantée</h3>
-                    <span class="lieu_restaurant">Charonne</span>
-                </a>
-                <span class="like"><i class="far fa-heart"></i></span>
-            </section>
-            <section class="la_francaise">
-                <a href="#">
-                    <img src="model\img\restaurants\alafrancaise.jpg" alt="image du restaurant">
-                    <h3 class="name_restaurant">A la française</h3>
-                    <span class="lieu_restaurant">Cité Rouge</span>
-                </a>
-                <span class="like"><i class="far fa-heart"></i></span>
-            </section>
-            <section class="delice_sens">
-                <a href="#">
-                    <img src="model\img\restaurants\ledelicesens.jpg" alt="image du restaurant">
-                    <h3 class="name_restaurant">Le délice des sens</h3>
-                    <span class="lieu_restaurant">Folie-Méricourt</span>
-                </a>
-                <span class="like"><i class="far fa-heart"></i></span>
-            </section>-->
         </section>
         <!-- Fin de la section restaurants -->
     </main>
