--- a/index.html
+++ b/index.html
@@ -60,16 +60,16 @@
         <section class="restaurants">
             <h1>Restaurants</h1>
             <section class="all_restaurants">
-                <section class="palette_du_gout">
+                <section class="base_restaurants">
                     <a href="#">
                         <img src="model\img\restaurants\palettedugout.jpg" alt="image du restaurant">
+                        <span class="isnew">Nouveau</span>
                         <h3 class="name_restaurant">La palette du goût</h3>
                         <span class="lieu_restaurant">Ménilmontant</span>
                     </a>
-                    <span class="isnew">Nouveau</span>
                     <span class="like"><i class="far fa-heart"></i></span>
                 </section>
-                <!--<section class="note_enchantee">
+                <section class="base_restaurants">
                     <a href="#">
                         <img src="model\img\restaurants\noteenchante.jpg" alt="image du restaurant">
                         <span class="isnew">Nouveau</span>
@@ -78,7 +78,7 @@
                     </a>
                     <span class="like"><i class="far fa-heart"></i></span>
                 </section>
-                <section class="la_francaise">
+                <section class="base_restaurants">
                     <a href="#">
                         <img src="model\img\restaurants\alafrancaise.jpg" alt="image du restaurant">
                         <h3 class="name_restaurant">A la française</h3>
@@ -86,25 +86,27 @@
                     </a>
                     <span class="like"><i class="far fa-heart"></i></span>
                 </section>
-                <section class="delice_sens">
+                <section class="base_restaurants">
                     <a href="#">
                         <img src="model\img\restaurants\ledelicesens.jpg" alt="image du restaurant">
                         <h3 class="name_restaurant">Le délice des sens</h3>
                         <span class="lieu_restaurant">Folie-Méricourt</span>
                     </a>
                     <span class="like"><i class="far fa-heart"></i></span>
-                </section>-->
+                </section>
             </section>
         </section>
         <!-- Fin de la section restaurants -->
     </main>
 
     <footer>
-        <img src="model\img\logo\ohmyfood.png" alt="logo ohmyfood">
-        <p><i class="fas fa-utensils"></i>Proposer un restaurant</p>
-        <p><i class="fas fa-hands-helping"></i>Devenir partenaire</p>
-        <p>Mentions légales</p>
-        <p>Contact</p>
+        <section class="all_footer">
+            <img src="model\img\logo\ohmyfood.png" alt="logo ohmyfood">
+            <p><i class="fas fa-utensils"></i>Proposer un restaurant</p>
+            <p><i class="fas fa-hands-helping"></i>Devenir partenaire</p>
+            <p>Mentions légales</p>
+            <p>Contact</p>
+        </section>
     </footer>
 </body>
 </html>
