--- a/index.html
+++ b/index.html
@@ -33,80 +33,89 @@
         <section class="presentation">
             <h2>Réservez le menu qui vous convient</h2>
             <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
-            <a class="" href="#">Explorer nos restaurants</a>
+            <a class="btn btn--gradient btn--radius" href="#">Explorer nos restaurants</a>
         </section>
         <!-- Fin de la section presentation -->
         <!-- Début de la section fonctionnement -->
-        <section class="fonctionnement">
-            <h1>Fonctionnement</h1>
-            <section class="all_fonctionnements">
-                <section class="choisir_restaurant">
-                    <span class="fonctionnement_number">1</span>
-                    <p class="fonctionnement_text"><i class="fas fa-mobile-alt"></i>Choisissez un restaurant</p>
-                </section>
-                <section class="composez_menu">
-                    <span class="fonctionnement_number">2</span>
-                    <p class="fonctionnement_text"><i class="fas fa-list"></i>Composez votre menu</p>
-                </section>
-                <section class="degustez_restaurant">
-                    <span class="fonctionnement_number">3</span>
-                    <p class="fonctionnement_text"><i class="fas fa-utensils"></i>Dégustez au restaurant</p>
-                </section>
-            </section>
+        <section class="commentCaMarche">
+            <h2>Fonctionnement</h2>
+            <ol>
+                <li class="list-item">
+                    <p><i class="fas fa-mobile-alt"></i>Choisissez un restaurant</p>
+                </li>
+                <li class="list-item">
+                    <p><i class="fas fa-list-ul"></i>Composez votre menu</p>
+                </li>
+                <li class="list-item">
+                    <p><i class="fas fa-store"></i>Dégustez au restaurant</p>
+                </li>
+            </ol>
         </section>
         <!-- Fin de la section fonctionnement -->
 
         <!-- Début de la section restaurants -->
-        <section class="restaurants">
-            <h1>Restaurants</h1>
-            <section class="all_restaurants">
-                <section class="base_restaurants">
-                    <a href="#">
-                        <img src="model\img\restaurants\palettedugout.jpg" alt="image du restaurant">
-                        <span class="isnew">Nouveau</span>
-                        <h3 class="name_restaurant">La palette du goût</h3>
-                        <span class="lieu_restaurant">Ménilmontant</span>
+        <section class="lesRestaurants">
+            <h2>Restaurants</h2>
+            <ul>
+                <li class="carte1">
+                    <a href="pages/laPaletteDuGout.html">
+                        <span class="sticker sticker__new">Nouveau</span>
+                        <img src="model/img/restaurants/LaPaletteDuGout.jpg" alt="La palette du goût - Ménilmontant">
+                        <h3>La palette du goût</h3>
+                        <p>Ménilmontant</p>
+                        <span class="btn__like">
+                            <i class="far fa-heart heart-away"></i>
+                            <i class="fas fa-heart heart-hover"></i>
+                        </span>
                     </a>
-                    <span class="like"><i class="far fa-heart"></i></span>
-                </section>
-                <section class="base_restaurants">
-                    <a href="#">
-                        <img src="model\img\restaurants\noteenchante.jpg" alt="image du restaurant">
-                        <span class="isnew">Nouveau</span>
-                        <h3 class="name_restaurant">La note enchantée</h3>
-                        <span class="lieu_restaurant">Charonne</span>
+                </li>
+                <li class="carte2">
+                    <a href="pages/laNoteEnchantee.html">
+                        <span class="sticker sticker__new">Nouveau</span>
+                        <img src="model/img/restaurants/LaNoteEnchantee.jpg" alt="La note enchantée - Charonne">
+                        <h3>La note enchantée</h3>
+                        <p>Charonne</p>
+                        <span class="btn__like">
+                            <i class="far fa-heart heart-away"></i>
+                            <i class="fas fa-heart heart-hover"></i>
+                        </span>
                     </a>
-                    <span class="like"><i class="far fa-heart"></i></span>
-                </section>
-                <section class="base_restaurants">
-                    <a href="#">
-                        <img src="model\img\restaurants\alafrancaise.jpg" alt="image du restaurant">
-                        <h3 class="name_restaurant">A la française</h3>
-                        <span class="lieu_restaurant">Cité Rouge</span>
+                </li>
+                <li class="carte3">
+                    <a href="pages/aLaFrancaise.html">
+                        <img src="model/img/restaurants/ALaFrancaise.jpg" alt="À la française - Cité Rouge">
+                        <h3>À la française</h3>
+                        <p>Cité Rouge</p>
+                        <span class="btn__like">
+                            <i class="far fa-heart heart-away"></i>
+                            <i class="fas fa-heart heart-hover"></i>
+                        </span>
                     </a>
-                    <span class="like"><i class="far fa-heart"></i></span>
-                </section>
-                <section class="base_restaurants">
-                    <a href="#">
-                        <img src="model\img\restaurants\ledelicesens.jpg" alt="image du restaurant">
-                        <h3 class="name_restaurant">Le délice des sens</h3>
-                        <span class="lieu_restaurant">Folie-Méricourt</span>
+                </li>
+                <li class="carte4">
+                    <a href="pages/leDelicesDesSens.html">
+                        <img src="model/img/restaurants/LeDeliceDesSens.jpg" alt="Le délice des sens - Folie-Méricourt">
+                        <h3>Le délice des sens</h3>
+                        <p>Folie-Méricourt</p>
+                        <span class="btn__like">
+                            <i class="far fa-heart heart-away"></i>
+                            <i class="fas fa-heart heart-hover"></i>
+                        </span>
                     </a>
-                    <span class="like"><i class="far fa-heart"></i></span>
-                </section>
-            </section>
+                </li>
+            </ul>
         </section>
         <!-- Fin de la section restaurants -->
     </main>
 
     <footer>
-        <section class="all_footer">
-            <img src="model\img\logo\ohmyfood.png" alt="logo ohmyfood">
-            <p><i class="fas fa-utensils"></i>Proposer un restaurant</p>
-            <p><i class="fas fa-hands-helping"></i>Devenir partenaire</p>
-            <p>Mentions légales</p>
-            <p>Contact</p>
-        </section>
+        <h2>Ohmyfood</h2>
+        <ul>
+            <li><a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
+            <li><a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
+            <li><a href="#">Mentions légales</a></li>
+            <li><a href="mailto:contact@ohmyfood.com">Contact</a></li>
+        </ul>
     </footer>
 </body>
 </html>
