--- a/pages/laPaletteDuGout.html
+++ b/pages/laPaletteDuGout.html
@@ -16,7 +16,7 @@
 <body>
     <!-- Début du header -->
     <header>
-        <h1>Ohmyfood</h1>
+        <img src="../model/img/logo/ohmyfood.png" alt="logo ohmyfood">
         <a class="btn__retourHome" href="../index.html">
             <i class="fas fa-arrow-left"></i>
         </a>
@@ -27,7 +27,7 @@
     <main>       
         <!-- Début de la section MenuDuResto -->
         <section class="menuDuResto">
-            <img class="menuDuResto__cover" src="../model/img/restaurants/LaPaletteDuGout.jpg" alt="À la française">
+            <img class="menuDuResto__cover" src="../model/img/restaurants/LaPaletteDuGout.jpg" alt="La palette du goût">
             <div class="menuDuResto__carte">
                 <h2>La Palette Du Goût
                     <button>
@@ -38,20 +38,20 @@
                 <h3>Entrées</h3>
                 <ul>
                     <li class="list-item list-item--1">
-                        <h4>Tartare de poulpe acidulé</h4>
-                        <p>Aux zestes d'orange</p>
+                        <h4>Fricassée d'escargot</h4>
+                        <p>Au piment d'Espelette</p>
                         <strong>25€</strong>
                         <span><i class="fas fa-check-circle"></i></span>
                     </li>
                     <li class="list-item list-item--2">
-                        <h4>Velouté de légumes d'antan</h4>
-                        <p>Carotte, panais, topinambour</p>
+                        <h4>Foie gras de canard mi-cuit</h4>
+                        <p>Et ses copeaux de truffe noire</p>
                         <strong>35€</strong>
                         <span><i class="fas fa-check-circle"></i></span>
                     </li>
                     <li class="list-item list-item--3">
-                        <h4>Soupe à l'oignon</h4>
-                        <p>Revisitée</p>
+                        <h4>Oeuf au plat</h4>
+                        <p>Assaisonné à la truffe sur lit de caviar</p>
                         <strong>20€</strong>
                         <span><i class="fas fa-check-circle"></i></span>
                     </li>
@@ -60,20 +60,20 @@
                 <h3>Plats</h3>
                 <ul>
                     <li class="list-item list-item--4">
-                        <h4>Coquilles Saint-Jacques</h4>
-                        <p>Accompagnées d'une purée de panais</p>
+                        <h4>Filet de boeuf aux herbes</h4>
+                        <p>Accompagné de sa ribambelle de légumes</p>
                         <strong>40€</strong>
                         <span><i class="fas fa-check-circle"></i></span>
                     </li>
                     <li class="list-item list-item--5">
-                        <h4>Magret de canard</h4>
-                        <p>Et parmentier de pommes de terre</p>
+                        <h4>Parmentier de queue de boeuf</h4>
+                        <p>À la truffe noire sur sa purée de panais</p>
                         <strong>35€</strong>
                         <span><i class="fas fa-check-circle"></i></span>
                     </li>
                     <li class="list-item list-item--6">
-                        <h4>Pigeonneau d’Ille-et-Vilaine</h4>
-                        <p>Sur son lit de gnocchis aux légumes</p>
+                        <h4>Filet de turbot</h4>
+                        <p>Aux agrumes</p>
                         <strong>44€</strong>
                         <span><i class="fas fa-check-circle"></i></span>
                     </li>
@@ -82,20 +82,20 @@
                 <h3>Desserts</h3>
                 <ul>
                     <li class="list-item list-item--7">
-                        <h4>Pétales de violettes glacés</h4>
-                        <p>Et purée de noisettes</p>
+                        <h4>Paris-Brest</h4>
+                        <p>Revisité</p>
                         <strong>18€</strong>
                         <span><i class="fas fa-check-circle"></i></span>
                     </li>
                     <li class="list-item list-item--8">
-                        <h4>Fondant au chocolat</h4>
-                        <p>Revisité</p>
+                        <h4>Macaron au chocolat d'exception</h4>
+                        <p>Et glace à la vanille de Madagascar</p>
                         <strong>22€</strong>
                         <span><i class="fas fa-check-circle"></i></span>
                     </li>
                     <li class="list-item list-item--9">
-                        <h4>Millefeuille croustillant</h4>
-                        <p>Myrtilles et pâte d’amande</p>
+                        <h4>Mousse au chocolat </h4>
+                        <p>Au piment d'Espelette et à la truffe noire</p>
                         <strong>23€</strong>
                         <span><i class="fas fa-check-circle"></i></span>
                     </li>
