--- a/pages/laNoteEnchantee.html
+++ b/pages/laNoteEnchantee.html
@@ -38,7 +38,7 @@
                 <h3>Entrées</h3>
                 <ul>
                     <li class="list-item list-item--1">
-                        <h4>Ravioles de foie grass</h4>
+                        <h4>Ravioles de foie gras</h4>
                         <p>Accompagnés de leur crème à la truffe</p>
                         <strong>25€</strong>
                         <span><i class="fas fa-check-circle"></i></span>
